@@ -6,7 +6,6 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.*;
 import java.util.regex.Pattern;
@@ -21,6 +20,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
@@ -35,6 +35,7 @@ import tools.jackson.databind.ObjectMapper;
 @RestController
 @RequestMapping("/api/v1/ui-data")
 @RequiredArgsConstructor
+@Tag(name = "UI Data")
 public class UIDataTessdataController {
 
     private static final Pattern INVALID_LANG_CHARS_PATTERN = Pattern.compile("[^A-Za-z0-9_+\\-]");
@@ -45,18 +46,18 @@ public class UIDataTessdataController {
     private static final long REMOTE_TESSDATA_TTL_MS = 10 * 60 * 1000; // 10 minutes
 
     @GetMapping("/tessdata-languages")
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PreAuthorize("hasRole('ADMIN')")
     @Operation(summary = "List installed and remotely available tessdata languages")
     public ResponseEntity<TessdataLanguagesResponse> getTessdataLanguages() {
         TessdataLanguagesResponse response = new TessdataLanguagesResponse();
         response.setInstalled(getAvailableTesseractLanguages());
         response.setAvailable(getRemoteTessdataLanguages());
-        response.setWritable(isWritableDirectory(Paths.get(runtimePathConfig.getTessDataPath())));
+        response.setWritable(isWritableDirectory(Path.of(runtimePathConfig.getTessDataPath())));
         return ResponseEntity.ok(response);
     }
 
     @PostMapping("/tessdata/download")
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PreAuthorize("hasRole('ADMIN')")
     @Operation(summary = "Download selected tessdata languages from the official repository")
     public ResponseEntity<Map<String, Object>> downloadTessdataLanguages(
             @RequestBody TessdataDownloadRequest request) {
@@ -65,7 +66,7 @@ public class UIDataTessdataController {
                     .body(Map.of("message", "No languages provided for download"));
         }
 
-        Path tessdataDir = Paths.get(runtimePathConfig.getTessDataPath());
+        Path tessdataDir = Path.of(runtimePathConfig.getTessDataPath());
         try {
             Files.createDirectories(tessdataDir);
         } catch (IOException e) {
